# numpyro_msc

./: .gitignore  README.md  pyproject.toml
numpyro_msc/: diagnostics.py  msc.py  nested_rhat.py  utils.py
tests/: test_all.py
